	  (DLR)
	- Remove most redundant includes of sys/stat.h.  It's included
	  in nano.h, so it doesn't need to be included in files that
	  include nano.h. (DLR)
	- Remove the DOS_FILE and MAC_FILE flags, as they're only used
	  in files.c, and replace them with a static file_format enum.
	  Change the openfilestruct structure accordingly in order to
	  handle this. (DLR)
- files.c:
  read_file()
	- Rename variable fileformat to format, to avoid confusion with
	  the file_format enum type. (DLR)
  do_insertfile()
	- Simplify by reusing variables whereever possible, and add a
	  parameter execute to indicate whether or not to be in "Execute
	  Command" mode. (DLR)
	- Rework so that goto is no longer needed, using do_writeout()
	  as a model. (DLR)
	- If file browsing succeeds, call statusq_abort() so that the
	  cursor position at the statusbar is reset. (DLR)
	- Add missing #ifdefs around the wrap_reset() call so that nano
	  compiles with wrapping disabled again. (DLR)
	- When inserting a file in non-multibuffer mode, preserve
	  placewewant as well as current_x, for consistency. (DLR)
  do_writeout()
	- Restructure if blocks for greater efficiency, using
	  do_insertfile() as a model. (DLR)
	- Simplify where possible, and use an int retval to hold the
	  return value instead of i. (DLR)
	- If file browsing succeeds, call statusq_abort() so that the
	  cursor position at the statusbar is reset. (DLR)
	- Remove unneeded calls to display_main_list(). (DLR)
  do_writeout_void()
	- Call display_main_list(), for consistency with
	  do_insertfile_void(). (DLR)
  write_file()
	- If we've tried to write to an unwritable file and we're not
	  prepending, tempname is NULL when it's passed to unlink().
	  This can cause problems if unlink() can't handle NULL, so
	  don't call it in that case. (David Benbennick)
  write_marked()
	- Remove check for MARK_ISSET's not being set. (DLR)
  open_prevfile(), open_nextfile()
	- Translate the "New Buffer" string when displaying "Switched