@@ -146,6 +146,10 @@
 
 /* Enumeration types. */
 typedef enum {
+    CUT_LINE, CUT_MARKED, CUT_TO_END
+} cut_type;
+
+typedef enum {
     NIX_FILE, DOS_FILE, MAC_FILE
 } file_format;
 
